[package]
name = "hyprstream-rpc-std"
version = "0.1.0"
edition.workspace = true
license = "MIT"
description = "Standard hyprstream service schemas and generated clients"
links = "hyprstream_rpc_std"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hyprstream-rpc = { path = "../hyprstream-rpc" }
hyprstream-rpc-derive = { path = "../hyprstream-rpc-derive" }

capnp = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
base64 = { workspace = true }
subsecond = { workspace = true }
inventory = { workspace = true }
tracing = { workspace = true }
hyprstream-vfs = { path = "../hyprstream-vfs" }
hyprstream-workers-tcl = { path = "../hyprstream-workers-tcl" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
  "console",
  "Worker",
  "WorkerOptions",
  "WorkerType",
] }
# #409 Path B: WanixMount (Wanix-native VFS via 9P2000.L over SharedArrayBuffer
# DMA). Only needed on the browser target; the DMA + WanixMount modules in
# hyprstream-9p are themselves `#[cfg(target_arch = "wasm32")]`.
# WanixMount 9P-over-DMA bridge (#409/#391). wasm32-only: the WanixMount and its
# P9Client/DmaTransport are entirely `#[cfg(target_arch = "wasm32")]`, so this is
# gated to the browser target to keep mount_wanix buildable in the wasm bundle.
hyprstream-9p = { path = "../hyprstream-9p" }

# moq browser subscriber (#484): moq-net (patched fork in third_party/ relaxes the
# wasm-hostile `SessionInner: Send + Sync` bound) drives the moq consume loop over
# web-transport-wasm's concrete `web_sys::WebTransport` Session, adapted to
# `web_transport_trait::Session` in `moq_wt_session.rs`.
moq-net = { workspace = true }
web-transport-trait = { workspace = true }
web-transport-wasm = "0.5"
bytes = "1"
url = "2"
# moq-net's `rand` pulls getrandom 0.3; the browser needs its wasm_js backend.
# Also requires `RUSTFLAGS=--cfg getrandom_backend="wasm_js"` at build time
# (set alongside `--cfg=web_sys_unstable_apis` in the frontend's build-wasm.sh).
getrandom = { version = "0.3", features = ["wasm_js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { workspace = true }

[build-dependencies]
capnpc = { workspace = true }
hyprstream-rpc-build = { path = "../hyprstream-rpc-build" }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
