[package]
name = "hyprstream-rpc"
version = "0.1.0"
edition.workspace = true
license = "MIT"
repository.workspace = true
description = "RPC infrastructure for hyprstream services (Cap'n Proto + ZMQ)"

[dependencies]
# Re-export derive macros
hyprstream-rpc-derive = { path = "../hyprstream-rpc-derive" }

# Cap'n Proto serialization
capnp = { workspace = true }

# ZMQ transport
tmq = { workspace = true }
zmq = { workspace = true }
zmq-sys = { workspace = true }  # Raw FFI for ZMQ_USE_FD socket option

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
tracing = { workspace = true }
whoami = { workspace = true }
hex = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }
inventory = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }

# Process spawning (moved from hyprstream-workers)
nix = { workspace = true }
dashmap = { workspace = true }
which = { workspace = true }
uuid = { workspace = true }

# Service management (merged from hyprstream-utils)
dirs = "5"
systemd = { version = "0.10", optional = true }
zbus_systemd = { version = "0.0.11", features = ["login1", "systemd1"], optional = true }

# Cryptography (for signed envelopes, DH key exchange, stream MAC)
ed25519-dalek = { workspace = true }
curve25519-dalek = { workspace = true }  # Ristretto255 DH for stream authentication
sha2 = { workspace = true }              # Always needed for Ed25519 (Sha512)
blake3 = { workspace = true }            # Default: fast KDF and MAC
hkdf = { workspace = true, optional = true }   # FIPS mode only
hmac = { workspace = true, optional = true }   # FIPS mode only
zeroize = { workspace = true }
subtle = { workspace = true }
rand = { workspace = true }

# FIPS mode (optional)
p256 = { workspace = true, optional = true }

[features]
default = []
fips = ["p256", "hkdf", "hmac"]  # FIPS mode uses P-256 + HKDF-SHA256 + HMAC-SHA256
systemd = ["dep:systemd", "dep:zbus_systemd"]

[build-dependencies]
capnpc = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }

[lints]
workspace = true
