[package]
name = "hyprstream-rpc"
version = "0.1.0"
edition.workspace = true
license = "MIT"
repository.workspace = true
description = "RPC infrastructure for hyprstream services (Cap'n Proto + ZMQ)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Re-export derive macros
hyprstream-rpc-derive = { path = "../hyprstream-rpc-derive" }

# Cap'n Proto serialization
capnp = { workspace = true }

# Cryptography (for signed envelopes, DH key exchange, stream MAC) — all targets
ed25519-dalek = { workspace = true }
curve25519-dalek = { workspace = true }  # Ristretto255 DH for stream authentication
sha2 = { workspace = true }              # Always needed for Ed25519 (Sha512)
blake3 = { workspace = true }            # Default: fast KDF and MAC
aes-gcm = { workspace = true }          # AES-256-GCM for notification broadcast encryption
hkdf = { workspace = true, optional = true }   # FIPS mode only
hmac = { workspace = true, optional = true }   # FIPS mode only
zeroize = { workspace = true }
subtle = { workspace = true }
rand = { workspace = true }

# FIPS mode (optional)
p256 = { workspace = true, optional = true }

# Shared deps — all targets
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }

# WASM cross-platform support
web-time = "1.1"    # Drop-in replacement for std::time (auto-detects wasm32)

# wasm32-only deps (browser target)
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }  # rand 0.8 uses getrandom 0.2

# Native-only deps (not compiled for wasm32)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# ZMQ transport
tmq = { workspace = true }
zmq = { workspace = true }
zmq-sys = { workspace = true }  # Raw FFI for ZMQ_USE_FD socket option

# QUIC transport (HTTP/3 + WebTransport + ZMTP over QUIC)
quinn = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true, features = ["ring"] }
h3 = { workspace = true }
h3-quinn = { workspace = true }
h3-webtransport = { workspace = true }
http = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["io-util", "net"] }
tokio-util = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }

# Utilities
tracing = { workspace = true }
whoami = { workspace = true }
parking_lot = { workspace = true }
once_cell = { workspace = true }
inventory = "0.3"

# Process spawning
nix = { workspace = true }
dashmap = { workspace = true }
which = { workspace = true }
uuid = { workspace = true }
webpki-roots = "0.26"

# Service management
dirs = "5"
systemd = { version = "0.10", optional = true }
zbus_systemd = { version = "0.0.11", features = ["login1", "systemd1"], optional = true }

[features]
default = []
fips = ["p256", "hkdf", "hmac"]  # FIPS mode uses P-256 + HKDF-SHA256 + HMAC-SHA256
systemd = ["dep:systemd", "dep:zbus_systemd"]

[build-dependencies]
capnpc = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }

[lints]
workspace = true
