[package]
name = "hyprstream-rpc"
version = "0.1.0"
edition.workspace = true
license = "MIT"
repository.workspace = true
description = "RPC infrastructure for hyprstream services (Cap'n Proto + ZMQ)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Re-export derive macros
hyprstream-rpc-derive = { path = "../hyprstream-rpc-derive" }

# Light, transport-free crypto primitives (COSE, ML-DSA/ML-KEM, KDF/MAC, did:key).
# Re-exported under `crypto::` / `did_key` so existing paths keep working (#916).
hyprstream-crypto = { path = "../hyprstream-crypto" }

# Cap'n Proto serialization
capnp = { workspace = true }

# Cryptography (for signed envelopes, DH key exchange, stream MAC) — all targets
ed25519-dalek = { workspace = true }
curve25519-dalek = { workspace = true }  # Ristretto255 DH for stream authentication
sha2 = { workspace = true }              # Always needed for Ed25519 (Sha512)
chacha20poly1305 = { workspace = true }  # ChaCha20Poly1305 AEAD for COSE_Encrypt0 (#553)
blake3 = { workspace = true }            # Default: fast KDF and MAC
aes-gcm = { workspace = true }          # AES-256-GCM for notification broadcast encryption
aes-gcm-siv = { workspace = true }     # AES-256-GCM-SIV for envelope encryption (nonce-misuse resistant)
hkdf = { workspace = true }                    # HKDF-SHA256 for identity derivation + FIPS
coset = { workspace = true }                   # COSE_Sign1 (RFC 9052) envelope signing
ciborium = { workspace = true }                # CBOR runtime (external_aad)
hmac = { workspace = true, optional = true }   # FIPS mode only
zeroize = { workspace = true }
subtle = { workspace = true }
rand = { workspace = true }

# FIPS mode (optional)
p256 = { workspace = true, optional = true }

# Post-quantum hybrid — always compiled (PQ mode is selected at RUNTIME via
# CryptoPolicy, not at compile time). See M3 (#152).
ml-dsa = { workspace = true }
ml-kem = { workspace = true }
# Hybrid KEM (#551/S0): X25519 DHKEM leg + KMAC256 transcript-binding combiner.
# Both pure-Rust (wasm32-safe) and already in the lock graph.
x25519-dalek = { version = "2", default-features = false, features = ["static_secrets", "zeroize"] }
tiny-keccak = { version = "2.0.2", features = ["kmac"] }

# Shared deps — all targets
anyhow = { workspace = true }
subsecond = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
bs58 = "0.5"                              # multibase base58btc for DID-doc transport service entries
data-encoding = "2.6"                     # multibase base32 (CIDv1 canonical form)
chrono = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }

# WASM cross-platform support
web-time = "1.1"    # Drop-in replacement for std::time (auto-detects wasm32)

# wasm32-only deps (browser target)
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3.64", features = [
  "Window", "Response", "Headers", "Request", "RequestInit", "RequestCache",
  "RequestCredentials", "RequestRedirect",
  "WebTransport", "WebTransportOptions", "WebTransportHash",
  "WebTransportBidirectionalStream",
  "ReadableStream", "ReadableStreamDefaultReader",
  "WritableStream", "WritableStreamDefaultWriter",
] }
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }  # rand 0.8 uses getrandom 0.2
# The always-on PQ crypto (ml-dsa/ml-kem → sha3/crypto-common) pulls getrandom 0.4, which
# refuses to build on wasm32-unknown-unknown unless its `wasm_js` backend is enabled.
# Declare it (renamed to coexist with the 0.2 entry) so the feature unifies onto the
# transitive 0.4 dep and the browser/WebTransport consumer compiles for wasm (#225).
getrandom_v04 = { package = "getrandom", version = "0.4", features = ["wasm_js"] }
# moq-net → rand 0.9.2 → getrandom 0.3 (distinct from 0.2 and 0.4 above).
# Must enable wasm_js on this generation too or it refuses to build on wasm32.
# iroh browser peer (Phase 2): iroh 1.0.0-rc.0 has upstream wasm32 support via
# cfg(wasm_browser) = cfg(all(target_family="wasm", target_os="unknown")).
# On wasm32, iroh uses PkarrResolver for peer discovery instead of DNS, and
# WebTransport/relay as the bearer instead of UDP. The browser becomes a full
# iroh peer with its own NodeId — same Rust code as native, compiled to wasm32.
# Enables did:key resolution by NodeId via pkarr natively in the browser,
# eliminating the pkarr HTTP gateway workaround in atproto.ts.
iroh = { workspace = true }
# web-transport-trait: the Session abstraction used by iroh's wasm32 bearer.
web-transport-trait = { workspace = true }
# url: needed by iroh_peer.rs to construct the pkarr relay URL for lookups.
url = { workspace = true }
# n0-error: iroh's error type (`address_lookup::Error`) is type-erased through
# n0-error's `AnyError`. iroh_peer.rs needs the `StackError` trait to walk the
# source chain and downcast a pkarr 404 to `Ok(None)` (#475). Pinned to iroh's
# transitive version so the `PkarrError` downcast resolves the same type.
n0-error = "=1.0.0-rc.0"
# NOTE: moq-net is NOT added here. moq-net 0.1.8 has Session+Sync bounds that
# conflict with browser WebTransport types (!Sync on wasm32). This requires an
# upstream fix in moq-net before it can compile for wasm32-unknown-unknown.
# Tracked separately; moq track subscribe/publish in the browser follows once
# the upstream Send/Sync bounds are resolved.

# Native-only deps (not compiled for wasm32)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# QUIC transport (HTTP/3 + WebTransport + ZMTP over QUIC)
quinn = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true, features = ["ring", "aws_lc_rs"] }
h3 = { workspace = true }
h3-quinn = { workspace = true }
h3-webtransport = { workspace = true }
http = { workspace = true }

# Iroh + MoQ (Epic #131 — Phase 1 substrate). See transport::iroh_substrate.
iroh = { workspace = true }
moq-net = { workspace = true }
web-transport-iroh = { workspace = true }
web-transport-quinn = { workspace = true }
web-transport-trait = { workspace = true }
yamux = { workspace = true }  # UDS transport: stream-multiplexer for Session-over-UnixStream
url = { workspace = true }
# HTTPS did:web DID-document fetch (#279). Native-only; mirrors the JWKS
# fetch+cache posture used by FederationKeyResolver in the hyprstream crate.
reqwest = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["io-util", "net", "sync"] }
tokio-util = { workspace = true }
bytes = { workspace = true }

# Utilities
tracing = { workspace = true }
whoami = { workspace = true }
once_cell = { workspace = true }
inventory = "0.3"

# System utilities
nix = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
webpki-roots = "0.26"
dirs = "5"
systemd = { version = "0.10", optional = true }

[features]
default = []
fips = ["p256", "hmac", "hyprstream-crypto/fips"]  # FIPS mode uses P-256 + HMAC-SHA256 (hkdf is always enabled)
# `pq-hybrid` is retained as a NO-OP alias for source/build compatibility.
# Post-quantum primitives (ML-DSA-65 + ML-KEM-768) are always compiled and the
# production policy is the pinned Hybrid suite.
pq-hybrid = []
# Enables EdDSA-only compatibility fixtures for downstream tests. Never enable
# this feature in a production artifact.
test-classical-policy = []
systemd = ["dep:systemd"]

[build-dependencies]
capnpc = { workspace = true }
hyprstream-rpc-build = { path = "../hyprstream-rpc-build" }

[dev-dependencies]
tokio-test = { workspace = true }
tracing-subscriber = { workspace = true }
noq = { version = "=1.0.0-rc.0", default-features = false, features = ["rustls-aws-lc-rs"] }
# Quinn hides the negotiated NamedGroup behind this upstream diagnostic feature.
# Enabling it only for tests lets live zmtp assertions use handshake_data without
# packet parsing or changing production wire behavior.
quinn = { workspace = true, features = ["__rustls-post-quantum-test"] }

[lints]
workspace = true
