[package]
name = "hyprstream-sandbox"
version = "0.1.0"
edition.workspace = true
license = "MIT"
description = "Trust-level-aware sandbox for untrusted Tcl execution"

[dependencies]
hyprstream-vfs = { path = "../hyprstream-vfs" }
hyprstream-tcl = { path = "../hyprstream-tcl" }
async-trait = { workspace = true }
tokio = { workspace = true }
# wasmtime = "29"  # Future: WASM-based isolation for full untrusted execution
