[package]
name = "hyprstream-sandbox"
version = "0.1.0"
edition.workspace = true
license = "MIT"
description = "Sandboxed Tcl execution with namespace forking and resource limits"

[dependencies]
hyprstream-vfs = { path = "../hyprstream-vfs" }
hyprstream-tcl = { path = "../hyprstream-tcl" }
async-trait = { workspace = true }
tokio = { workspace = true }
# wasmtime = "29"  # Future: WASM-based isolation (memory limits, fuel metering)
