[package]
name = "hyprstream-tcl"
version = "0.1.0"
edition.workspace = true
license = "MIT"
description = "Tcl (molt) shell for hyprstream VFS namespace"

[dependencies]
molt = { git = "https://github.com/hyprstream/hyprstream-molt.git", branch = "hyprstream" }
hyprstream-vfs = { path = "../hyprstream-vfs" }
async-trait = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
