[package]
name = "hyprstream-tui"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Terminal UI for hyprstream — wizard, dashboards, status"

[lib]
name = "hyprstream_tui"
path = "src/lib.rs"

[[bin]]
name = "hyprstream-tui"
path = "src/main.rs"

[dependencies]
avt = "0.17"
ratatui = { version = "0.30", default-features = false, features = ["layout-cache"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
waxterm = { path = "../waxterm", features = ["avt"] }

[target.'cfg(not(target_os = "wasi"))'.dependencies]
libc = "0.2"
dirs-next = "2"

[profile.release]
opt-level = "s"
lto = true
