[package]
name = "hyprstream-tui"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Terminal UI for hyprstream — wizard, dashboards, status"

[lib]
name = "hyprstream_tui"
path = "src/lib.rs"

[[bin]]
name = "hyprstream-tui"
path = "src/main.rs"

[dependencies]
avt = "0.17"
hyprstream-compositor = { path = "../hyprstream-compositor" }
ratatui = { version = "0.30", default-features = false, features = ["layout-cache"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
waxterm = { path = "../waxterm", features = ["avt"] }
anyhow = { version = "1" }
aes-gcm = "0.10"
parking_lot = "0.12"
rand = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
zeroize = { version = "1", features = ["derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"

[target.'cfg(not(target_os = "wasi"))'.dependencies]
libc = "0.2"
dirs-next = "2"
tui-logger = { version = "0.18", default-features = false }
ratatui-textarea = { version = "0.8", default-features = false }
edtui = { version = "0.11" }
crossterm = { version = "0.29", default-features = false }

[profile.release]
opt-level = "s"
lto = true
